<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalMob</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="slogan">Sem esperas, sem stress &#8230;</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="acesso">Entrar</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_user">usuario</string>
    <string name="prompt_password_confirm">Confirmar Senha</string>
    <string name="prompt_fone">Telefone (Opcional)</string>
    <string name="prompt_photodesc">Selecionar uma Foto</string>
    <string name="error_no_math_password">As senhas não coicidem</string>
    <string name="error_user_exist">Usuario já existe</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_drower_app">DrowerAppActivity</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Em Andamento</string>
    <string name="title_section3">Amigos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="new_meeting">Novo Encontro</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">senha</string>
    <string name="action_register">Register</string>
    <string name="text_register">Não tem conta? Cadastre-se Abaixo:</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="app_id">1539529132929916</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="title_activity_master_app">MasterAppActivity</string>    
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>    
    <string name="tvEncontroCom">Com:</string>
    <string name="tvEncontroOnde">Onde:</string>
    <string name="tvConcluir">Concluir</string>
    

</resources>
