<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/praiabkg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/linearRegister" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/cadastro_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/AntiqueWhite"
                android:textColorHint="#50FAEBD7" />

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/cadastro_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/AntiqueWhite"
                android:textColorHint="#50FAEBD7" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/AntiqueWhite"
                android:textColorHint="#50FAEBD7" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/AntiqueWhite"
                android:textColorHint="#50FAEBD7" />

            <EditText
                android:id="@+id/passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_confirm"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/AntiqueWhite"
                android:textColorHint="#50FAEBD7" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fone"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/AntiqueWhite"
                android:textColorHint="#50FAEBD7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/etImagemSelec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.97"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/prompt_photodesc"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/AntiqueWhite"
                    android:textColorHint="#90FAEBD7" >
                </EditText>

                <ImageView
                    android:id="@+id/imvIcoFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/prompt_photodesc"
                    android:src="@drawable/ic_act_cam" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imvFoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/prompt_photodesc"
                android:scaleType="fitXY"
                android:src="@drawable/com_facebook_profile_picture_blank_square" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/AntiqueWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>